# noises-and-patterns

./: Cargo.toml  Readme.md
generator/: Cargo.toml
generator/src/: main.rs
noises-and-patterns/: Cargo.toml  Readme.md
noises-and-patterns/src/: bricks.rs  lib.rs  noise.rs  pattern.rs  value.rs
noises-and-patterns/src/noise/: value.rs  voronoibasic.rs
noises-and-patterns/src/pattern/: bricks.rs
