[package]
name = "noises-and-patterns"
version = "0.1.0"
edition = "2021"
authors = ["Markus Moenig"]
description = "A procedural creator library for noises and patterns"
license = "MIT"
repository = "https://github.com/markusmoenig/noises-and-patterns.git"
keywords = ["noise", "pattern", "procedural", "game", "graphics"]

[dependencies]
nalgebra = "0.31.0"
nalgebra-glm = "0.17.0"
